0-nginx-configmap.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    name: nginx
spec:
  containers:
  - name: nginx
    image: nginx:1.12-alpine
    command: [ "/bin/sh", "-c", "env" ] #changed so we can run **k logs nginx** to see configmap data.
    ports:
    - containerPort: 80
  restartPolicy: Never
