alpine-pod-service-account.yaml
apiVersion: v1
kind: Pod
metadata:
  #creationTimestamp: null
  labels:
    run: alpine-sa
  name: alpine-sa
spec:
  serviceAccountName: mysa
  containers:
  - args:
    - /bin/sh
    - -c
    - echo hello;sleep 3600
    image: alpine
    name: alpine-2-containers
   # resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
#status: {}
