1-whoami-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  #name: whoami-service-nodeport #changed
  name: whoami-service
spec:
  ports:
  - name: http
    targetPort: 80
    port: 80
  selector:
    app: whoami
  type: NodePort
