0-nginx-ingress.yaml
---
# old code commented out  #changed
# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: nginx
#   annotations:
#     ingress.kubernetes.io/ssl-redirect: "false"
# spec:
#   rules:
#   - http:
#       paths:
#       - path: /
#         backend:
#           serviceName: nginx
#           servicePort: 80

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx-example
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
