0-nginx-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx
  sessionAffinity: None
  type: ClusterIP 
---
# changed
# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: nginx
#   annotations:
#     ingress.kubernetes.io/ssl-redirect: "false"
# spec:
#   rules:
#   - http:
#       paths:
#       - path: /
#         backend:
#           serviceName: nginx
#           servicePort: 80


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx-example
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
