2-whoareyou-all.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoareyou-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: whoareyou
  template:
    metadata:
      labels:
        app: whoareyou
    spec:
      containers:
      - name: whoareyou-container
        image: containous/whoami
---
apiVersion: v1
kind: Service
metadata:
  name: whoareyou-service
spec:
  ports:
  - name: http
    targetPort: 80
    port: 80
  selector:
    app: whoareyou
---
# changed
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: whoareyou-ingress
#   annotations:
#     kubernetes.io/ingress.class: "traefik" 
# spec:
#   rules:
#   - host: node2 
#     http:
#       paths:
#       - path: /
#         backend:
#           serviceName: whoareyou-service
#           servicePort: http


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoareyou-ingress
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  ingressClassName: traefik
  rules:
  - host: node2
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: whoareyou-service
            port:
              number: 80

# Do we need to add IngreessClass https://kubernetes.github.io/ingress-nginx/#i-have-only-one-instance-of-the-ingresss-nginx-controller-in-my-cluster-what-should-i-do
