3-ghost-ingress.yaml
---
#apiVersion: networking.k8s.io/v1 #changed
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ghost
  annotations:
    #ingress.kubernetes.io/ssl-redirect: "false" #changed
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /ghost
        pathType: Prefix
        backend:
          # serviceName: ghost
          # servicePort: 2368 
          service:
            name: ghost
            port:
              number: 2368
