4-node-red-all.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-red
  labels:
    app: node-red
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-red
  template:
    metadata:
      labels:
        app: node-red
    spec:
      containers:
      - name: node-red
        image: insightful/node-red:slim
        imagePullPolicy: Always
        ports:
        - containerPort: 1880
        volumeMounts:
        - mountPath: /data
          name: data-volume
      volumes:
      - name: data-volume
        hostPath:
          path: /srv/state/node-red
          type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: node-red
spec:
  selector:
    app: node-red
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 1880
---
# apiVersion: networking.k8s.io/v1
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: master.lan
  annotations:
    #kubernetes.io/ingress.class: nginx 
    ingressclass.kubernetes.io/is-default-class: "true" #changed
spec:
  ingressClassName: nginx
  rules:
  - host: master.lan 
    http:
      paths:
      - path: /
        pathType: Prefix #changed
        backend:
          #changed
          # serviceName: node-red
          # servicePort: 8080
          service:
            name: node-red
            port:
              number: 8080
